--- a/index.html
+++ b/index.html
@@ -1,15 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Calgary Renovation Company</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Calgary Renovation</title>
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    /* Custom Styles */
+    /* Global Styles */
+    body {
+      font-family: 'Roboto', sans-serif;
+      scroll-behavior: smooth;
+      background-color: #f8f9fa;
+      color: #333;
+    }
+    a {
+      text-decoration: none;
+    }
+    /* Sticky Header */
+    header {
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    /* Navbar */
+    .navbar {
+      background-color: #fff;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    /* Intro Section */
+    #intro {
+      background-color: #2a2a2a;
+      color: #fff;
+      padding: 80px 0;
+      text-align: center;
+    }
+    #intro h1 {
+      font-weight: 700;
+    }
+    /* Section Headings */
+    section h2 {
+      font-weight: 700;
+      margin-bottom: 40px;
+      position: relative;
+      padding-bottom: 10px;
+    }
+    section h2::after {
+      content: '';
+      width: 60px;
+      height: 4px;
+      background-color: #007bff;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 0;
+      border-radius: 2px;
+    }
+    /* Slider Styles */
     .slider-container {
-      width: 500px;
+      width: 100%;
+      max-width: 800px;
       height: 500px;
       overflow: hidden;
       margin: 0 auto;
@@ -21,7 +75,7 @@
       height: 500px;
     }
     .slides img {
-      width: 500px;
+      width: 100%;
       height: 500px;
       object-fit: cover;
       flex-shrink: 0;
@@ -35,7 +89,7 @@
       border: none;
       padding: 10px;
       cursor: pointer;
-      font-size: 18px;
+      font-size: 24px;
       z-index: 2;
     }
     .prev {
@@ -44,24 +98,37 @@
     .next {
       right: 10px;
     }
-    /* Custom Footer styling */
+    /* Cards */
+    .card {
+      border: none;
+      border-radius: 8px;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    }
+    /* Footer */
     footer {
       background-color: #343a40;
       color: #fff;
-      padding: 20px 0;
+      padding: 40px 0;
+    }
+    footer a {
+      color: #fff;
     }
   </style>
 </head>
 <body>
   <!-- Header -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="./logo.png" alt="Calgary Renovation Company Logo" class="d-inline-block align-text-top" style="height:80px; border-radius: 8px;">
+          <img src="./logo.png" alt="Calgary Renovation Company Logo" style="height:60px; border-radius: 8px;">
           Calgary Renovation Company
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -78,141 +145,181 @@
   </header>
 
   <!-- Main Content -->
-  <main class="container my-5">
-    <!-- Portfolio Slideshow -->
-    <section id="portfolio" class="mb-5">
-      <h2 class="text-center mb-4">Our Portfolio</h2>
-      <div class="slider-container border rounded shadow">
-        <div class="slides" id="slides">
-          <!-- Images will be loaded here by JavaScript -->
-        </div>
-        <button class="slide-btn prev" onclick="prevSlide()">&#10094;</button>
-        <button class="slide-btn next" onclick="nextSlide()">&#10095;</button>
+  <main>
+    <!-- Intro Section -->
+    <section id="intro">
+      <div class="container">
+        <h1 class="display-4">Transform Your Home with Calgary Renovation Company</h1>
+        <p class="lead fw-bold">Expert Home Renovations that Maximize Your Investment</p>
+        <p class="mb-4">
+          Your home is your greatest asset. Our bespoke renovation solutions combine innovative design, expert craftsmanship, and premium materials to elevate your living space while increasing its market value.
+        </p>
+        <a href="#portfolio" class="btn btn-primary btn-lg">Discover Our Expertise</a>
       </div>
     </section>
 
-    <!-- Introduction Section -->
-    <section id="intro" class="mb-5 text-center">
-      <h1 class="display-4">Welcome to Calgary Renovation Company</h1>
-      <p class="lead fw-bold">Premium Home Renovations at 75% of the Average Market Rates</p>
-      <p>
-        At Calgary Renovation Company, we believe every home deserves a fresh, modern look without breaking the bank.
-        Our cost-effective renovation solutions combine innovative design, expert craftsmanship, and best-grade materials
-        to deliver premium quality at an unbeatable value.
-      </p>
+    <!-- Portfolio Slideshow -->
+    <section id="portfolio" class="py-5">
+      <div class="container">
+        <h2 class="text-center">Our Portfolio</h2>
+        <div class="slider-container border rounded shadow">
+          <div class="slides" id="slides">
+            <!-- Images will be loaded here by JavaScript -->
+          </div>
+          <button class="slide-btn prev" onclick="prevSlide()">&#10094;</button>
+          <button class="slide-btn next" onclick="nextSlide()">&#10095;</button>
+        </div>
+      </div>
     </section>
 
     <!-- Services Section -->
-    <section id="services" class="mb-5">
-      <h2 class="mb-4">Our Services</h2>
-      <div class="row">
-        <!-- Kitchen Renovations -->
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body">
-              <h3 class="card-title">Kitchen Renovations</h3>
-              <ul class="list-unstyled">
-                <li>Custom cabinetry and countertop installations</li>
-                <li>Complete layout redesigns</li>
-                <li>Modernization for enhanced functionality and style</li>
-              </ul>
+    <section id="services" class="py-5 bg-light">
+      <div class="container">
+        <h2 class="text-center">Our Services</h2>
+        <div class="row g-4">
+          <!-- Kitchen & Dining Renovations -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h3 class="card-title">Kitchen & Dining Renovations</h3>
+                <p>Transform your kitchen into a space where functionality meets style.</p>
+                <ul class="list-unstyled">
+                  <li>Custom cabinetry & premium countertops</li>
+                  <li>Optimized layout design</li>
+                  <li>Modern fixtures & elegant finishes</li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-        <!-- Bathroom Renovations -->
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body">
-              <h3 class="card-title">Bathroom Renovations</h3>
-              <ul class="list-unstyled">
-                <li>Fixture updates and contemporary fittings</li>
-                <li>Vanity, shower, and bathtub installations</li>
-                <li>Stylish tiling and layout improvements</li>
-              </ul>
+          <!-- Bathroom Transformations -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h3 class="card-title">Bathroom Transformations</h3>
+                <p>Create a spa-like retreat with refined, modern design.</p>
+                <ul class="list-unstyled">
+                  <li>Contemporary fittings & custom vanities</li>
+                  <li>Luxurious tiling & lighting</li>
+                  <li>Sleek shower and tub installations</li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-        <!-- Custom Woodworking -->
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body">
-              <h3 class="card-title">Custom Woodworking</h3>
-              <ul class="list-unstyled">
-                <li>Handcrafted cabinetry and built-ins</li>
-                <li>Custom furniture design</li>
-                <li>Unique wood features for your home</li>
-              </ul>
+          <!-- Custom Carpentry & Woodworking -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h3 class="card-title">Custom Carpentry & Woodworking</h3>
+                <p>Bespoke craftsmanship that adds character and warmth.</p>
+                <ul class="list-unstyled">
+                  <li>Handcrafted cabinetry & built-ins</li>
+                  <li>Custom furniture design</li>
+                  <li>Unique wood accents</li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-        <!-- Landscaping -->
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body">
-              <h3 class="card-title">Landscaping</h3>
-              <ul class="list-unstyled">
-                <li>Garden design and maintenance</li>
-                <li>Outdoor lighting and irrigation</li>
-                <li>Hardscaping and patio construction</li>
-              </ul>
+          <!-- Landscape & Outdoor Living -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h3 class="card-title">Landscape & Outdoor Living</h3>
+                <p>Enhance your curb appeal with inviting outdoor spaces.</p>
+                <ul class="list-unstyled">
+                  <li>Innovative garden design</li>
+                  <li>Outdoor lighting & irrigation</li>
+                  <li>Hardscaping & patio enhancements</li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-        <!-- Basement Building -->
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body">
-              <h3 class="card-title">Basement Building</h3>
-              <ul class="list-unstyled">
-                <li>Full basement finishing and remodeling</li>
-                <li>Home theaters, offices, and extra living spaces</li>
-                <li>Customized storage and design solutions</li>
-              </ul>
+          <!-- Basement Conversions -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h3 class="card-title">Basement Conversions</h3>
+                <p>Unlock the potential of your basement with smart, multi-functional designs.</p>
+                <ul class="list-unstyled">
+                  <li>Complete finishing & remodeling</li>
+                  <li>Home theaters, offices, or extra living space</li>
+                  <li>Custom storage solutions</li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-        <!-- Commercial Renovation -->
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body">
-              <h3 class="card-title">Commercial Renovation</h3>
-              <ul class="list-unstyled">
-                <li>Office and retail space makeovers</li>
-                <li>Customized designs for business needs</li>
-                <li>Project management for efficient execution</li>
-              </ul>
+          <!-- Commercial Renovations -->
+          <div class="col-md-6 col-lg-4">
+            <div class="card h-100 shadow-sm">
+              <div class="card-body">
+                <h3 class="card-title">Commercial Renovations</h3>
+                <p>Revitalize your business space with tailored design solutions.</p>
+                <ul class="list-unstyled">
+                  <li>Office & retail makeovers</li>
+                  <li>Customized layouts & designs</li>
+                  <li>Efficient project management</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Why Work With Us Section -->
-    <section id="why-us" class="mb-5">
-      <h2 class="mb-4">Why Work With Us</h2>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item"><strong>Cost-Effective Solutions:</strong> Enjoy premium renovations at just 75% of market rates.</li>
-        <li class="list-group-item"><strong>Expert Design & Craftsmanship:</strong> Our skilled team brings your vision to life with attention to every detail.</li>
-        <li class="list-group-item"><strong>Best-Grade Materials:</strong> We source high-quality materials directly from suppliers.</li>
-        <li class="list-group-item"><strong>Innovative Technology:</strong> Our AI-powered tools streamline design and project management.</li>
-        <li class="list-group-item"><strong>Tailored Solutions:</strong> Whether you’re flipping a property or building a forever home, we have you covered.</li>
-        <li class="list-group-item"><strong>Transparent Project Management:</strong> Enjoy open communication and detailed planning from start to finish.</li>
-      </ul>
+    <!-- Why Choose Us Section -->
+    <section id="why-us" class="py-5">
+      <div class="container">
+        <h2 class="text-center">Why Choose Us</h2>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><strong>Strategic Investment:</strong> Our renovations are designed to maximize your property’s value.</li>
+          <li class="list-group-item"><strong>Uncompromising Quality:</strong> Expert craftsmanship ensures lasting beauty and functionality.</li>
+          <li class="list-group-item"><strong>Premium Materials:</strong> We source only the finest products for exceptional results.</li>
+          <li class="list-group-item"><strong>Innovative Technology:</strong> Cutting-edge tools streamline our process for precision and speed.</li>
+          <li class="list-group-item"><strong>Bespoke Solutions:</strong> Customized renovations tailored to your unique vision.</li>
+          <li class="list-group-item"><strong>Transparent Management:</strong> Clear communication and detailed planning every step of the way.</li>
+        </ul>
+      </div>
     </section>
 
-    <!-- Call-to-Action Section -->
-    <section id="contact" class="mb-5 bg-primary text-white rounded p-5 text-center">
-      <h2 class="mb-4">Contact Now &amp; Get a Free Quote!</h2>
-      <p class="mb-4">Ready to transform your home or business? Our experts are waiting to help you achieve the look you’ve always wanted.</p>
-      <a href="tel:8254314101" class="btn btn-light btn-lg fw-bold">Call Us Now: 825-431-4101</a>
+    <!-- Renovation Quote Form Section -->
+    <section id="quote" class="py-5">
+      <div class="container">
+        <h2 class="text-center mb-4">Request Your Renovation Quote</h2>
+        <div class="d-flex justify-content-center">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe4GvlJbuU7iiVUE9lcGwTfRFkxFwAAO40hDgEpSK_POAw_7A/viewform?embedded=true" width="640" height="2265" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
+      </div>
     </section>
-  </main>
+
+<!-- Text Us Section -->
+<section id="contact" class="py-5 bg-primary text-white text-center">
+  <div class="container">
+    <h2>Ready to Transform Your Home?</h2>
+    <p class="mb-4">Our team of experts is here to help you every step of the way. Experience superior craftsmanship and innovative design that truly elevates your space.</p>
+    <!-- The anchor will be updated by JavaScript to display one of the two phone numbers -->
+    <a id="cta-phone" href="#" class="btn btn-light btn-lg fw-bold"></a>
+  </div>
+</section>
+
+<script>
+  // Define the two phone numbers
+  const phoneNumbers = [
+    { number: '825-431-4101', display: 'Text Us Now: 825-431-4101' },
+    { number: '403-923-4082', display: 'Text Us Now: 403-923-4082' }
+  ];
+  
+  // Randomly choose one of the phone numbers
+  const randomChoice = phoneNumbers[Math.floor(Math.random() * phoneNumbers.length)];
+  
+  // Update the anchor tag with the chosen number
+  const ctaPhone = document.getElementById('cta-phone');
+  ctaPhone.setAttribute('href', 'sms:' + randomChoice.number);
+  ctaPhone.innerText = randomChoice.display;
+</script>
 
   <!-- Footer -->
   <footer>
     <div class="container text-center">
-      <!-- <p class="mb-1">Calgary Renovation Company &copy; 2025. All Rights Reserved.</p> -->
-      <p class="mb-0">Contact Us: <a href="tel:8254314101" class="text-white">825-431-4101</a> | <a href="mailto:waynerg@icloud.com" class="text-white">waynerg@icloud.com</a></p>
+      <p class="mb-0">Contact Us: <a href="tel:8254314101">825-431-4101</a> | <a href="mailto:waynerg@icloud.com">waynerg@icloud.com</a></p>
       <p class="mt-3">Calgary Renovation Company by Woodshop + Works &copy; 2025. All Rights Reserved.</p>
     </div>
   </footer>
@@ -225,9 +332,9 @@
     let currentSlide = 0;
     let totalSlides = 0;
 
-    // Load images from 1.jpg to 39.jpg
+    // Dynamically load images (adjust totalImages as needed)
     function loadImages() {
-      const totalImages = 39; // Number of images
+      const totalImages = 10;
       for (let i = 1; i <= totalImages; i++) {
         const img = new Image();
         img.src = 'img/' + i + '.jpg';
@@ -236,30 +343,20 @@
         totalSlides++;
       }
     }
-
-    // Call the function to load images.
     loadImages();
 
     // Slider navigation functions
     function updateSlidePosition() {
-      slider.style.transform = 'translateX(-' + currentSlide * 500 + 'px)';
+      slider.style.transform = 'translateX(-' + currentSlide * 100 + '%)';
     }
-
     function nextSlide() {
-      if (totalSlides > 0) {
-        currentSlide = (currentSlide + 1) % totalSlides;
-        updateSlidePosition();
-      }
+      currentSlide = (currentSlide + 1) % totalSlides;
+      updateSlidePosition();
     }
-
     function prevSlide() {
-      if (totalSlides > 0) {
-        currentSlide = (currentSlide - 1 + totalSlides) % totalSlides;
-        updateSlidePosition();
-      }
+      currentSlide = (currentSlide - 1 + totalSlides) % totalSlides;
+      updateSlidePosition();
     }
-
-    // Auto-slide every 5 seconds
     setInterval(nextSlide, 5000);
   </script>
 </body>
