--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="./logo.png" alt="Calgary Renovation Company Logo" style="height:60px; border-radius: 8px;">
-          Calgary Renovation Company
+          <img src="./logo.png" alt="Calgary Renovation Logo" style="height:60px; border-radius: 8px;">
+          Calgary Renovation
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -149,7 +149,7 @@
     <!-- Intro Section -->
     <section id="intro">
       <div class="container">
-        <h1 class="display-4">Transform Your Home with Calgary Renovation Company</h1>
+        <h1 class="display-4">Transform Your Home with Calgary Renovation</h1>
         <p class="lead fw-bold">Expert Home Renovations that Maximize Your Investment</p>
         <p class="mb-4">
           Your home is your greatest asset. Our bespoke renovation solutions combine innovative design, expert craftsmanship, and premium materials to elevate your living space while increasing its market value.
@@ -320,7 +320,7 @@
   <footer>
     <div class="container text-center">
       <p class="mb-0">Contact Us: <a href="tel:8254314101">825-431-4101</a> | <a href="mailto:waynerg@icloud.com">waynerg@icloud.com</a></p>
-      <p class="mt-3">Calgary Renovation Company by Woodshop + Works &copy; 2025. All Rights Reserved.</p>
+      <p class="mt-3">Calgary Renovation by Woodshop + Works &copy; 2025. All Rights Reserved.</p>
     </div>
   </footer>
 
