--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16927014341"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-16927014341');
+  </script>
+  
   <title>Calgary Renovation</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -290,36 +301,37 @@
       </div>
     </section>
 
-<!-- Text Us Section -->
-<section id="contact" class="py-5 bg-primary text-white text-center">
-  <div class="container">
-    <h2>Ready to Transform Your Home?</h2>
-    <p class="mb-4">Our team of experts is here to help you every step of the way. Experience superior craftsmanship and innovative design that truly elevates your space.</p>
-    <!-- The anchor will be updated by JavaScript to display one of the two phone numbers -->
-    <a id="cta-phone" href="#" class="btn btn-light btn-lg fw-bold"></a>
-  </div>
-</section>
+    <!-- Text Us Section -->
+    <section id="contact" class="py-5 bg-primary text-white text-center">
+      <div class="container">
+        <h2>Ready to Transform Your Home?</h2>
+        <p class="mb-4">Our team of experts is here to help you every step of the way. Experience superior craftsmanship and innovative design that truly elevates your space.</p>
+        <!-- The anchor will be updated by JavaScript to display one of the two phone numbers -->
+        <a id="cta-phone" href="#" class="btn btn-light btn-lg fw-bold"></a>
+      </div>
+    </section>
+  </main>
 
-<script>
-  // Define the two phone numbers
-  const phoneNumbers = [
-    { number: '825-431-4101', display: 'Text Us Now: 825-431-4101' },
-    { number: '403-923-4092', display: 'Text Us Now: 403-923-4092' }
-  ];
-  
-  // Randomly choose one of the phone numbers
-  const randomChoice = phoneNumbers[Math.floor(Math.random() * phoneNumbers.length)];
-  
-  // Update the anchor tag with the chosen number
-  const ctaPhone = document.getElementById('cta-phone');
-  ctaPhone.setAttribute('href', 'sms:' + randomChoice.number);
-  ctaPhone.innerText = randomChoice.display;
-</script>
+  <script>
+    // Define the two phone numbers
+    const phoneNumbers = [
+      { number: '825-431-4101', display: 'Text Us Now: 825-431-4101' },
+      { number: '403-923-4092', display: 'Text Us Now: 403-923-4092' }
+    ];
+    
+    // Randomly choose one of the phone numbers
+    const randomChoice = phoneNumbers[Math.floor(Math.random() * phoneNumbers.length)];
+    
+    // Update the anchor tag with the chosen number
+    const ctaPhone = document.getElementById('cta-phone');
+    ctaPhone.setAttribute('href', 'sms:' + randomChoice.number);
+    ctaPhone.innerText = randomChoice.display;
+  </script>
 
   <!-- Footer -->
   <footer>
     <div class="container text-center">
-      <p class="mb-0">Contact Us: <a href="tel:8254314101">825-431-4101</a> | <a href="mailto:waynerg@icloud.com">waynerg@icloud.com</a></p>
+      <p class="mb-0">Contact Us: 403-923-4092 / 825-431-4101</p>
       <p class="mt-3">Calgary Renovation by Woodshop + Works &copy; 2025. All Rights Reserved.</p>
     </div>
   </footer>
